force-app/main/default/objects/Field_Service_Ticket__c/Field_Service_Ticket__c.object-meta.xml
<CustomObject>
    <label>Field Service Ticket</label>
    <nameField>
        <displayFormat>FST-{0000}</displayFormat>
        <label>SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Service Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>