force-app/main/default/objects/Field_Service_Ticket__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Field Service Tickets</relationshipLabel>
    <relationshipName>Field_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>