force-app/main/default/objects/Field_Service_Ticket__c/fields/Case_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Email__c</fullName>
    <formula>Case_ID__r.Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Email</label>
    <type>Text</type>
</CustomField>