force-app/main/default/objects/Field_Service_Ticket__c/fields/Estimated_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Labor_Cost__c</fullName>
    <label>Estimated Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>