force-app/main/default/objects/Field_Service_Ticket__c/fields/Field_Service_Agent__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Field Service Tickets</relationshipLabel>
    <relationshipName>Field_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>