force-app/main/default/objects/Field_Service_Ticket__c/fields/Field_Service_Agent_Address__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Agent_Address__c</fullName>
    <formula>Field_Service_Agent__r.MailingStreet&amp;&#39; &#39;&amp;Field_Service_Agent__r.MailingCity

&amp;IF(ISBLANK(Field_Service_Agent__r.MailingCity),&#39;&#39;,&#39;, &#39;)&amp;
Field_Service_Agent__r.MailingState&amp;&#39; &#39;&amp;Field_Service_Agent__r.MailingPostalCode&amp;&#39; &#39;&amp; Field_Service_Agent__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Service Agent Address</label>
    <type>Text</type>
</CustomField>