force-app/main/default/objects/Field_Service_Ticket__c/fields/Field_Service_Agent_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Agent_Contact_Number__c</fullName>
    <formula>Field_Service_Agent__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Service Agent Contact Number</label>
    <type>Text</type>
</CustomField>