force-app/main/default/objects/Field_Service_Ticket__c/fields/Field_Service_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Agent_Email__c</fullName>
    <formula>Field_Service_Agent__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Service Agent Email</label>
    <type>Text</type>
</CustomField>