force-app/main/default/objects/Field_Service_Ticket__c/fields/Field_Service_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Agent_Name__c</fullName>
    <formula>Field_Service_Agent__r.FirstName  &amp; &#39; &#39;&amp; Field_Service_Agent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Service Agent Name</label>
    <type>Text</type>
</CustomField>