force-app/main/default/objects/Field_Service_Ticket__c/fields/Home_Owner_Consumer_ID__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner_Consumer_ID__c</fullName>
    <formula>Case_ID__r.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Owner/Consumer ID</label>
    <type>Text</type>
</CustomField>