force-app/main/default/objects/Field_Service_Ticket__c/fields/Home_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_Owner_Name__c</fullName>
    <formula>Case_ID__r.Contact.FirstName &amp;&#39; &#39;&amp; Case_ID__r.Contact.LastName</formula>
    <label>Home Owner Name</label>
    <type>Text</type>
</CustomField>