force-app/main/default/objects/Field_Service_Ticket__c/fields/Is_Ready_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the FST record is ready to be sent for approval (CA users).</description>
    <label>Is Ready for Approval</label>
    <type>Checkbox</type>
</CustomField>