force-app/main/default/objects/Field_Service_Ticket__c/fields/NegotiatedAmt_Appr1__c.field-meta.xml
<CustomField>
    <fullName>NegotiatedAmt_Appr1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver when the negotiated amount is 0-2500.</description>
    <label>NegotiatedAmt_Appr1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>