force-app/main/default/objects/Field_Service_Ticket__c/fields/NegotiatedAmt_Appr2__c.field-meta.xml
<CustomField>
    <fullName>NegotiatedAmt_Appr2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver when the negotiated amount is 2501 - 75000.</description>
    <label>NegotiatedAmt_Appr2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Service_Tickets1</relationshipName>
    <type>Lookup</type>
</CustomField>