force-app/main/default/objects/Field_Service_Ticket__c/fields/NegotiatedAmt_Appr3__c.field-meta.xml
<CustomField>
    <fullName>NegotiatedAmt_Appr3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver when the negotiated amount is 75001 - 500000</description>
    <label>NegotiatedAmt_Appr3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Service_Tickets2</relationshipName>
    <type>Lookup</type>
</CustomField>