force-app/main/default/objects/Field_Service_Ticket__c/fields/Problem_Details__c.field-meta.xml
<CustomField>
    <fullName>Problem_Details__c</fullName>
    <label>Problem Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>