force-app/main/default/objects/Field_Service_Ticket__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Field Service Tickets</relationshipLabel>
    <relationshipName>Field_Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>