force-app/main/default/objects/Field_Service_Ticket__c/fields/Received_On__c.field-meta.xml
<CustomField>
    <fullName>Received_On__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received On</label>
    <type>Date</type>
</CustomField>