force-app/main/default/objects/Field_Service_Ticket__c/fields/Related_Case_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Contact_Name__c</fullName>
    <formula>Case_ID__r.Contact.FirstName +&#39; &#39;+Case_ID__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case Contact Name</label>
    <type>Text</type>
</CustomField>