force-app/main/default/objects/Field_Service_Ticket__c/fields/Related_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Number__c</fullName>
    <formula>Case_ID__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case Number</label>
    <type>Text</type>
</CustomField>