force-app/main/default/objects/Field_Service_Ticket__c/fields/Related_Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Owner_Name__c</fullName>
    <formula>Case_ID__r.Owner:User.FirstName +&#39; &#39;+Case_ID__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case Owner Name</label>
    <type>Text</type>
</CustomField>