force-app/main/default/objects/Field_Service_Ticket__c/fields/Related_Case_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Product__c</fullName>
    <formula>Case_ID__r.Asset.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case Product</label>
    <type>Text</type>
</CustomField>