force-app/main/default/objects/Field_Service_Ticket__c/fields/US_Process_Approver__c.field-meta.xml
<CustomField>
    <fullName>US_Process_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to select user for custom approval for the US process flow.</description>
    <label>Choose Next Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Service_Tickets3</relationshipName>
    <type>Lookup</type>
</CustomField>