force-app/main/default/objects/Field_Service_Ticket__c/recordTypes/FST_CA.recordType-meta.xml
<RecordType>
    <fullName>FST_CA</fullName>
    <active>true</active>
    <description>FST for CA users</description>
    <label>FST CA</label>
</RecordType>