force-app/main/default/objects/Field_Service_Ticket__c/recordTypes/FST_US.recordType-meta.xml
<RecordType>
    <fullName>FST_US</fullName>
    <active>true</active>
    <description>FST for US users</description>
    <label>FST US</label>
</RecordType>