force-app/main/default/objects/Field_Service_Ticket__c/validationRules/Chk_Negiotiated_Amt_before_appr_submit.validationRule-meta.xml
<ValidationRule>
    <fullName>Chk_Negiotiated_Amt_before_appr_submit</fullName>
    <active>true</active>
    <description>Validates if the negotiated amt is entered before approval submission.</description>
    <errorConditionFormula>AND(  Is_Ready_for_Approval__c , 
  OR( IsBlank( Negotiated_Labor_Cost__c ),
      Negotiated_Labor_Cost__c &lt;= 0 )
   )</errorConditionFormula>
    <errorDisplayField>Negotiated_Labor_Cost__c</errorDisplayField>
    <errorMessage>Please enter Negotiated Labor Cost to be approved.</errorMessage>
</ValidationRule>