force-app/main/default/objects/Field_Service_Ticket__c/validationRules/Validate_User_country.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_User_country</fullName>
    <active>true</active>
    <description>Validate if the current user&#39;s country is set before saving FST record.</description>
    <errorConditionFormula>IsBlank(TEXT($User.Region__c))</errorConditionFormula>
    <errorMessage>Please have country specified on user details before saving Field Service Ticket. Please contact your administrator for this.</errorMessage>
</ValidationRule>